--- a/test/fixtures/statuses.yml
+++ b/test/fixtures/statuses.yml
@@ -2,12 +2,12 @@
 
 one:
   content: MyText
-  user: jason
+  user: rpulijala	
 
 two:
   content: MyText
-  user: jason
+  user: rpulijala	
 
 three:
   content: "Hi I'm Jim"
-  user: jim
+  user: apulijala
